# price_elasticity_prediction

./: README.md  environment.yml  pyproject.toml
data/: df_elasticity.parquet  df_raw.parquet  result_elasticity.parquet  result_elasticity.pkl
notebooks/: first_circle.ipynb
streamlit_app/: streamlit.py
