[tool.poetry]
name = "price-elasticity-prediction"
version = "0.1.0"
description = ""
authors = ["Danillo Cordeiro"]
readme = "README.md"
packages = [{include = "price_elasticity_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
